<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Open Add Bottom Sheet -->
    <shortcut
        android:shortcutId="add_memory"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add"
        android:shortcutLongLabel="@string/shortcut_add_memory">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.memgallery"
            android:targetClass="com.example.memgallery.ShortcutOverlayActivity">
            <extra android:name="shortcut_action" android:value="add_memory" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Open Audio Recording -->
    <shortcut
        android:shortcutId="record_audio"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_audio"
        android:shortcutShortLabel="@string/shortcut_audio"
        android:shortcutLongLabel="@string/shortcut_record_audio">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.memgallery"
            android:targetClass="com.example.memgallery.MainActivity">
            <extra android:name="shortcut_action" android:value="record_audio" />
        </intent>
    </shortcut>

    <!-- Open Text Editor -->
    <shortcut
        android:shortcutId="text_note"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_note"
        android:shortcutShortLabel="@string/shortcut_note"
        android:shortcutLongLabel="@string/shortcut_create_note">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.memgallery"
            android:targetClass="com.example.memgallery.MainActivity">
            <extra android:name="shortcut_action" android:value="text_note" />
        </intent>
    </shortcut>
</shortcuts>
